--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -9,6 +9,10 @@ on:
   pull_request:
     branches:
       - "main"
+  workflow_run:
+    workflows: [Rebase Upstream]
+    types:
+      - completed
 
 jobs:
   docker:
